src/components/controlBar/controlBar.css
.font-medium {
  font-size: 15px;
}

.panel_container {
  width: 100%;
}

.panelHeader {
  background-color: var(--chc-panel-header-bg);
  -webkit-align-items: center;
  -webkit-flex-direction: row;
  flex-direction: row;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  align-content: center;
  align-items: center;
  display: flex;
  padding: 1em;
  height: 3em;
  width: 100%;
  flex-grow: 1;
}

.buttonBar {
  padding: 0.5em;
}

.tabHeader {
  padding: 0.5em;
  padding-bottom: 0em;
}

.buttonBar,
.options_left {
  display: flex;
  flex-direction: row;
  align-content: center;
  -webkit-flex-direction: row;
  -webkit-align-content: center;
}

.buttonBar {
  flex-direction: row;
  width: 100%;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  align-content: center;
  -webkit-align-items: center;
  align-items: center;
}

.options_left,
.options_center,
.options_right {
  flex: 1;
  display: flex;
  flex-direction: row;
  align-items: center;
  align-content: center;
}

.options_left {
  flex-flow: row wrap;
  justify-content: flex-start;
}

.options_center {
  justify-content: center;
}

.options_right {
  flex-wrap: wrap;
  justify-content: flex-end;
}

.options_overlay {
  flex-grow: 1;
  -webkit-flex-direction: row;
  flex-direction: row;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  align-content: center;
  -webkit-align-items: center;
  align-items: center;
  display: none;
}

.flexcol {
  display: flex;
  -webkit-flex-direction: column;
  flex-direction: column;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

.flexcenter {
  display: flex;
  -webkit-justify-content: center;
  justify-content: center;
  align-content: center;
  -webkit-align-items: center;
  align-items: center;
}

.dropdown-content {
  border: 1px solid var(--chc-border-primary);
}

